--- a/lemon_hooks/src/index.html
+++ b/lemon_hooks/src/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <p>123</p>
+  <div class="well">
+    <div id="root"></div>
+  </div>
 </body>
 </html>
